fix: agent2 learns compact openapi context from agent1 document